--- a/libraries/css/AdminLTE/AdminLTE_ext.css
+++ b/libraries/css/AdminLTE/AdminLTE_ext.css
@@ -194,15 +194,19 @@ section.content{
 }
 
 .table td>span{
-    //white-space:nowrap;
-    //margin-left:5px;
-    //margin-right:5px;
+    /*
+    white-space:nowrap;
+    margin-left:5px;
+    margin-right:5px;
+    */
 }
 
 .table td>div{
-    //white-space:nowrap;
-    //margin-left:5px;
-    //margin-right:5px;
+    /*
+    white-space:nowrap;
+    margin-left:5px;
+    margin-right:5px;
+    */
 }
 
 .modal{
